releases/armi/v0.2.3/_sources/gallery/framework/run_isotxs2_matrix.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/framework/run_isotxs2_matrix.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_framework_run_isotxs2_matrix.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_framework_run_isotxs2_matrix.py:


Plotting a multi-group scatter matrix
=====================================

Here we plot scatter matrices from an ISOTXS microscopic cross section library.
We plot the inelastic scatter cross section of U235 as well as the (n,2n) source
matrix.

See Also: :py:mod:`ISOTXS <armi.nuclearDataIO.isotxs>` format.

.. GENERATED FROM PYTHON SOURCE LINES 25-42



.. rst-class:: sphx-glr-horizontal


    *

      .. image:: /gallery/framework/images/sphx_glr_run_isotxs2_matrix_001.png
          :alt: U-235 inelastic scattering XS
          :class: sphx-glr-multi-img

    *

      .. image:: /gallery/framework/images/sphx_glr_run_isotxs2_matrix_002.png
          :alt: U-235 n,2n src scattering XS
          :class: sphx-glr-multi-img





.. code-block:: default

    import matplotlib.pyplot as plt

    from armi.utils import units
    from armi.tests import ISOAA_PATH
    from armi.nuclearDataIO.cccc import isotxs
    from armi.nuclearDataIO import xsNuclides
    from armi import configure

    configure(permissive=True)

    lib = isotxs.readBinary(ISOAA_PATH)

    u235 = lib.getNuclide("U235", "AA")
    xsNuclides.plotScatterMatrix(u235.micros.inelasticScatter, "U-235 inelastic")

    plt.figure()
    xsNuclides.plotScatterMatrix(u235.micros.n2nScatter, "U-235 n,2n src")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.351 seconds)


.. _sphx_glr_download_gallery_framework_run_isotxs2_matrix.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: run_isotxs2_matrix.py <run_isotxs2_matrix.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: run_isotxs2_matrix.ipynb <run_isotxs2_matrix.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
